<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4"
    android:background="@color/main_color"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/top_text"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_back"
        android:layout_weight="3">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/edit_text_back"
                android:drawableRight="@drawable/ic_person"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/login_hint"
                android:inputType="textPersonName"
                android:paddingLeft="26dp"
                android:paddingEnd="26dp"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/edit_text_back"
                android:drawableRight="@drawable/ic_lock"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:paddingLeft="26dp"
                android:paddingEnd="26dp"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/login_btn"
                android:layout_width="170dp"
                android:visibility="visible"
                android:layout_height="52dp"
                android:layout_gravity="right"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="26dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/login_button"
                android:drawableRight="@drawable/ic_login"
                android:fontFamily="@font/open_sans"
                android:paddingStart="26dp"
                android:paddingEnd="26dp"
                android:text="@string/text_btn"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>