<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="11"
    android:background="@color/main_color"
    tools:context=".oformit">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/cancel_1"
            android:layout_width="23dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/top_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/text_main_btn"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="normal"
            android:transitionName="anim_new_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:background="@drawable/card_back">


        <TextView
            android:id="@+id/create_sale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/open_sans"
            android:text="Количество товаров [0]"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/create_sale"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="16dp"
            android:background="@color/line_color" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_choose_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/result_sale"
            android:layout_below="@+id/line1"
            android:visibility="gone"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="16dp"
            tools:listitem="@layout/choosed_item_recycler" />

        <LinearLayout
            android:id="@+id/add_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/result_sale"
            android:layout_below="@+id/line1"
            android:visibility="visible"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_items" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:gravity="center_horizontal"
                android:text="NO DATA"
                android:textColor="@color/text_color"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/result_sale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="6dp"
            android:orientation="vertical">
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:background="@color/line_color" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginBottom="6dp">

                <Button
                    android:id="@+id/add"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:background="@drawable/button_yellow"
                    android:text="Добавить товар"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginBottom="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="95dp"
                    android:text="Скидка:"
                    android:textColor="@color/text_color"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/discount_edittext"
                    android:layout_width="88dp"
                    android:layout_height="34dp"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/edit_text_search"
                    android:hint="@string/ckidka"
                    android:inputType="numberDecimal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/text_color"
                    android:textSize="14sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/open_sans"
                        android:gravity="start"
                        android:text="Подитог:"
                        android:textColor="@color/text_color"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/total_ans"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/open_sans_semibold"
                        android:gravity="end"
                        android:text="0 руб"
                        android:textColor="@color/text_color"
                        android:textSize="17sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/open_sans"
                        android:gravity="start"
                        android:text="Скидка:"
                        android:textColor="@color/text_color"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/total_discount"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/open_sans_semibold"
                        android:gravity="end"
                        android:text="0 руб"
                        android:textColor="@color/text_color"
                        android:textSize="17sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/open_sans"
                        android:gravity="start"
                        android:text="Продажа:"
                        android:textColor="@color/text_color"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/total_exp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/open_sans_semibold"
                        android:gravity="end"
                        android:text="0 руб"
                        android:textColor="@color/main_color"
                        android:textSize="17sp" />

                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/btns"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancelOn"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:layout_marginEnd="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_back_out"
                    android:fontFamily="@font/open_sans"
                    android:text="Отмена"
                    android:textAllCaps="false"
                    android:textColor="@color/main_color"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <Button
                    android:id="@+id/sale"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:layout_marginStart="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_back"
                    android:fontFamily="@font/open_sans"
                    android:text="Продать"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="normal" />
            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

</LinearLayout>